Embed SymPy through GraalPy with exact verified factorization (#772)
Add the optional lock-bound GraalPy/SymPy factorization backend, preserve the exact verifier trust boundary, isolate native modules in private extracted resources, and qualify warm, cold and CPython control tracks through the checkout-owned Gradle and Maven contracts.

Refs #763